proses pembuatan survey form (on-progres)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Survey Form | Joe Taslim</title>
 </head>
 <body>
-    
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+    <!-- container -->
+    <div id="container">
+        <!-- title content -->
+        <section id="title-content">
+            <h1 id="title">Joe Taslim Survey Form</h1>
+            <p id="description">Terima kasih telah meluangkan waktu untuk mengisi form ini</p>
+        </section>
+
+        <!-- survey form -->
+        <form action="" id="survey-form"></form>
+    </div>
 </body>
 </html>
